--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "create-guid": "git+https://github.com/gdnmobilelab/create-guid.git",
     "promise-map": "^1.1.0",
     "query-string": "^4.2.0",
     "treo": "^0.5.1"
